--- a/bootstrap/css/jumbotron.css
+++ b/bootstrap/css/jumbotron.css
@@ -3,3 +3,13 @@ body {
   padding-top: 50px;
   padding-bottom: 20px;
 }
+
+@font-face {
+  font-family: 'GeoSans';
+  src: url('fonts/GeosansLight.ttf');
+}
+
+.jumbotron h1
+{
+  font-family: 'GeoSans', cursive;
+}
