--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -9,6 +9,19 @@ html {
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
+
+@font-face {
+    font-family: 'GeoSans';
+    src: url('geosanslight-webfont.eot');
+    src: url('geosanslight-webfont.eot?#iefix') format('embedded-opentype'),
+         url('geosanslight-webfont.woff2') format('woff2'),
+         url('geosanslight-webfont.woff') format('woff'),
+         url('geosanslight-webfont.ttf') format('truetype'),
+         url('geosanslight-webfont.svg#geosanslightregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
   margin: 0;
 }
