--- a/bootstrap/css/cover.css
+++ b/bootstrap/css/cover.css
@@ -1,6 +1,5 @@
 html {
   position: relative;
-
   min-height: 100%;
 }
 
@@ -10,23 +9,30 @@ body {
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
   background: linear-gradient(#851608, #D94218);
   height: 100%;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 
 .cover-heading
 {
   padding-bottom: 20px;
   text-transform: uppercase;
+  margin-bottom: 20px;
+  font-family: impact;
 }
 
-.cover-heading h1, .cover-heading h2
+.cover-heading h1
 {
-  font-size: 50px;
+  font-size: 55px;
+}
+
+.cover-heading h2
+{
+  font-size: 45px;
 }
 
 /* Padding for spacing */
-  .footer {
-    position: absolute;
+.footer {
+  position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
