--- a/bootstrap/css/cover.css
+++ b/bootstrap/css/cover.css
@@ -7,17 +7,16 @@ body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  background: linear-gradient(#851608, #D94218);
-  height: 100%;
-  margin-bottom: 40px;
+  background: linear-gradient(#851608, #110200);
+  margin-bottom: 30px;
 }
 
 .cover-heading
 {
-  padding-bottom: 20px;
   text-transform: uppercase;
   margin-bottom: 20px;
   font-family: impact;
+  text-shadow: 3px 3px 1px #000;
 }
 
 .cover-heading h1
@@ -30,11 +29,17 @@ body {
   font-size: 45px;
 }
 
+#fbbutton
+{
+  margin-top: 20px;
+}
+
 /* Padding for spacing */
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 40px;
+  height: 30px;
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
