--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -4977,7 +4977,7 @@ a.badge:focus {
   margin-bottom: 30px;
   color: white;
   /*background-color: #ff7070;*/
-  background: linear-gradient(to right, #83C9BF, #679F96);
+  background: linear-gradient(to right, #83d5c9, #54837c);
 }
 .jumbotron h1,
 .jumbotron .h1 {
