--- a/bootstrap/css/jumbotron.css
+++ b/bootstrap/css/jumbotron.css
@@ -19,6 +19,7 @@ body {
 .jumbotron {
   font-family: 'GeoSans';
   background-image: url('../../img/banner.png');
+  background-size: 100% 100%;
 }
 
 .col {
