--- a/bootstrap/css/jumbotron.css
+++ b/bootstrap/css/jumbotron.css
@@ -19,7 +19,10 @@ body {
 .jumbotron {
   font-family: 'GeoSans';
   background-image: url('../../img/banner.png');
-  background-size: 100% 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1;
 }
 
 .col {
