--- a/bootstrap/css/jumbotron.css
+++ b/bootstrap/css/jumbotron.css
@@ -95,3 +95,11 @@ h4
 {
   text-decoration: underline;
 }
+
+#doomsday
+{
+  color: #8c0000;
+  text-transform: uppercase;
+  font-size: 75px;
+  text-align: center;
+}
